fixed the line spacing in the footer

--- a/src/containers/Footer.module.css
+++ b/src/containers/Footer.module.css
@@ -4,7 +4,7 @@
 .Footer {
 	display: flex;
 	justify-content: center;
-	margin-bottom: 20px;
+	margin-bottom: 1.5vw;
 	font-size: 2vw;
 } 
 .Test {
@@ -13,7 +13,7 @@
 .Line{
 	border-bottom: 1px solid grey;
 	width: 12vw;
-	margin: 15px auto;
+	margin: 1vw auto;
 }
 .Main img{
 	margin: 10px;
